[metadata]
name = pyprjdemo 
author = Yipei Niu
author-email = newypei@gmail.com
summary = A Demo Python Project
license = Apache-2 
description-file = README.md
home-page = http://pypi.python.org/pypi/pyprjdemo
requires-python = >=2.6
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages = pyprjdemo
